# ai-agent-aws-bedrok

./: .gitignore  package-lock.json  package.json  readme.Md
backend/: deploy.py  main.py  me.txt  pyproject.toml  requirements.txt
backend/data/: facts.json  styles.txt
backend/src/: resources.py  server.py  server_v2.py
backend/src/config/: app_config.py  file_loader.py  memory_loader.py  resources.py
backend/src/model/: __init__.py
backend/src/services/: chat_service.py  conversation_service.py  personality_service.py
frontend/: .gitignore  README.md
frontend/app/: page.tsx
frontend/components/: twin.tsx
