[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.3",
    "openai>=2.38.0",
    "pypdf>=6.12.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.29",
    "uvicorn>=0.48.0",
]
